frame/support/test/tests/pallet_ui/duplicate_storage_prefix.stderr
error: Duplicate storage prefixes found for `Foo`
  --> $DIR/duplicate_storage_prefix.rs:15:29
   |
15 |     #[pallet::storage_prefix = "Foo"]
   |                                ^^^^^

error: Duplicate storage prefixes found for `Foo`
  --> $DIR/duplicate_storage_prefix.rs:12:7
   |
12 |     type Foo<T> = StorageValue<_, u8>;
   |          ^^^

error: Duplicate storage prefixes found for `CounterForBar`, used for counter associated to counted storage map
  --> $DIR/duplicate_storage_prefix.rs:22:7
   |
22 |     type Bar<T> = CountedStorageMap<_, Twox64Concat, u16, u16>;
   |          ^^^

error: Duplicate storage prefixes found for `CounterForBar`
  --> $DIR/duplicate_storage_prefix.rs:19:7
   |
19 |     type CounterForBar<T> = StorageValue<_, u16>;
   |          ^^^^^^^^^^^^^

error[E0412]: cannot find type `_GeneratedPrefixForStorageFoo` in this scope
  --> $DIR/duplicate_storage_prefix.rs:12:7
   |
12 |     type Foo<T> = StorageValue<_, u8>;
   |          ^^^ not found in this scope

error[E0412]: cannot find type `_GeneratedPrefixForStorageNotFoo` in this scope
  --> $DIR/duplicate_storage_prefix.rs:16:7
   |
16 |     type NotFoo<T> = StorageValue<_, u16>;
   |          ^^^^^^ not found in this scope

error[E0412]: cannot find type `_GeneratedPrefixForStorageCounterForBar` in this scope
  --> $DIR/duplicate_storage_prefix.rs:19:7
   |
19 |     type CounterForBar<T> = StorageValue<_, u16>;
   |          ^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `_GeneratedPrefixForStorageBar` in this scope
  --> $DIR/duplicate_storage_prefix.rs:22:7
   |
22 |     type Bar<T> = CountedStorageMap<_, Twox64Concat, u16, u16>;
   |          ^^^ not found in this scope
